fixed navbar cropping

--- a/CASA/public/css/styles.css
+++ b/CASA/public/css/styles.css
@@ -9,7 +9,7 @@ body {
     position: fixed;
     top: 0;
     background-color: #D9D9D9;
-    height: 53px;
+    height: 60px;
     width: 100%;
     max-width: 500px;
     display: flex;
@@ -24,7 +24,7 @@ body {
     position: fixed;
     bottom: 0;
     background-color: #D9D9D9;
-    height: 50px;
+    height: 60px;
     width: 100%;
     max-width: 500px;
     display: flex;
@@ -46,8 +46,14 @@ body {
     min-height: 20%;
     background-color: lightblue;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    text-align: center;
+    font-size: 10pt;
+}
+
+#forecast-container td {
+    padding: 4px;
 }
 
 #currentWeatherNotification {
@@ -68,7 +74,7 @@ body {
     width: 100%;
     height: 10vh;
     background-color: lightblue;
-    display: block;
+    display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
